# chute-kun

./: .clinerules  .cursorrules  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  .roomodes  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TaskChute_methodology.md  clinerules_plan.md  jest.config.js  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.cursor/: mcp.json
.githooks/: pre-commit
.github/workflows/: ci.yml  tests.yml
.husky/: pre-commit  pre-push
docs/: IMPLEMENTATION.md  README.md  configuration.md  system-overview.md
docs/adr/: ADR-001-TaskManagementAPI-Selection.md  ADR-002-TDD-Development-Approach.md  ADR-003-Rust-TUI-Library-Selection.md  ADR-003-Serverless-Architecture.md  ADR-004-Keyboard-Enhancement-IME-Compatibility.md  ADR-004-Technology-Stack-Direction.md  ADR-005-Hierarchical-Task-Display.md  ADR-005-Label-Unification-OK-Cancel.md  ADR-006-Integration-Test-Error-Handling.md  ADR-007-ClientSide-Filtering-For-Tasks.md
docs/api/: todoist-client-implementation.md  todoist-client.md
docs/data/: models.md
docs/decisions/: commit-strategy.md  development-workflow.md  log.md  technology-evaluation.md
docs/features/: configuration.md  subtask-structure.md  task-categories-v1.md  task-formatter.md  timeblock-generation.md  toggl-sync-design-v1.md  tui-app-spec-v1.md  tui-testlist-v1.md
docs/modules/: task-manager.md
docs/planning/: cline-config.md  development-plan.md  todoist-api-improvement.md
docs/processes/: clock-abstraction-and-testing.md  commit-strategy.md  decisions-log.md  development-workflow.md  estimate-slider.md  integration-testing-guide.md  tui-architecture-and-naming.md  ui-popups-unified.md
docs/research/: 2025-08-rust-tui-landscape.md  (+4 more)
scripts/: add-subtask.ts
src/: checkDueDates.ts  createTodayTask.ts  fetchSubtasks.ts  fetchTodaySubtasks.ts  index.ts  lib.rs
tests/: app_add_task_test.rs  app_bring_from_future_test.rs  app_calendar_quit_back_to_list_test.rs  app_category_config_key_action_test.rs  app_category_picker_key_test.rs  app_category_picker_keyboard_test.rs  app_command_palette_test.rs  app_command_popup_mouse_buttons_test.rs  app_delete_confirm_test.rs  app_delete_popup_mouse_buttons_test.rs  app_double_click_toggle_test.rs  app_drag_head_space_hover_test.rs  app_drag_reorder_future_test.rs  app_drag_reorder_test.rs  app_drag_tail_space_hover_test.rs  app_edit_estimate_test.rs  app_enter_toggle_test.rs  app_estimate_edit_date_keys_test.rs  app_estimate_edit_missing_planned_date_regression_test.rs  app_estimate_popup_mouse_buttons_test.rs  app_estimate_slider_drag_test.rs  app_f_finish_test.rs  app_finish_records_session_log_test.rs  app_finish_selected_test.rs  app_future_double_click_bring_test.rs  app_history_finish_test.rs  app_hover_adjusts_on_banner_toggle_test.rs  app_hover_tail_space_no_hover_test.rs  app_input_mode_test.rs  app_input_popup_mouse_buttons_test.rs  app_interrupt_test.rs  app_japanese_input_test.rs  app_key_event_kind_filter_test.rs  app_key_transitions_test.rs  app_mouse_category_click_test.rs  app_mouse_category_hitbox_bounds_test.rs  app_mouse_select_test.rs  app_mouse_tabs_hitbox_test.rs  app_new_task_date_default_test.rs  app_new_task_date_picker_tomorrow_test.rs  (+130 more)
(+24 files in other folders)
