[package]
name = "chute_kun"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TaskChute + Todoist CLI/TUI — Rust TUI template using ratatui + crossterm"
# NOTE: Set these URLs to your real locations before `cargo publish`.
# e.g., https://github.com/<owner>/chute_kun
repository = "https://github.com/annenpolka/chute-kun"
homepage = "https://github.com/annenpolka/chute-kun"
documentation = "https://docs.rs/chute_kun"
readme = "README.md"
keywords = ["tui", "cli", "taskchute", "time-tracking"]
# Valid category slugs must come from https://crates.io/category_slugs
categories = ["command-line-utilities", "date-and-time"]

# Keep the published crate lean. Adjust as needed, but do not exclude README/LICENSE.
exclude = [
  "/.github/**",
  "/.husky/**",
  "/docs/**",
  "/.pre-commit-config.yaml",
  "/CLAUDE.md",
  "/AGENTS.md",
]

[dependencies]
anyhow = "1"
color-eyre = "0.6"
crossterm = "0.29"
ratatui = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
unicode-width = "0.2"

[dev-dependencies]
# keep same versions available to tests
ratatui = "0.29"
crossterm = "0.29"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
unicode-width = "0.2"

[[bin]]
name = "chute_kun"
path = "src/cli/main.rs"
